adicionando coil, defindo design system, migrando para navigate safe args, refatorando as request, extraindo textos para resources, mapeando novos campos para o DTO

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">prodroid movie list</string>
+    <string name="genres">Gênero</string>
+    <string name="release">Lançamento:</string>
 </resources>
