--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">prodroid movie list</string>
-    <string name="genres">Gênero</string>
-    <string name="release">Lançamento:</string>
+    <string name="genres">Categoria: %1$s</string>
+    <string name="release">Ano: %1$s</string>
+    <string name="vote_count">(%1$s avaliações)</string>
 </resources>
